gen/GramaticaParser.java
// Generated from /Users/loretouzquiano/Desktop/PracticaPL/src/Gramatica.g4 by ANTLR 4.13.1

    import Traduccion.*;
    import java.util.ArrayList;
    import java.util.List;
    import java.io.PrintWriter;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		IDENT=32, CONSTINT=33, CONSTFLOAT=34, CONSTLIT=35, COMMENT=36, WS=37;
	public static final int
		RULE_axioma = 0, RULE_program = 1, RULE_defines = 2, RULE_ctes = 3, RULE_partes = 4, 
		RULE_part = 5, RULE_lcond1 = 6, RULE_lcond2 = 7, RULE_opl = 8, RULE_cond = 9, 
		RULE_opr = 10, RULE_restpart = 11, RULE_params = 12, RULE_listparam1 = 13, 
		RULE_listparam2 = 14, RULE_blq = 15, RULE_type = 16, RULE_sentlist = 17, 
		RULE_sent1 = 18, RULE_ident1 = 19, RULE_ident2 = 20, RULE_lid1 = 21, RULE_lid2 = 22, 
		RULE_lexp1 = 23, RULE_lexp2 = 24, RULE_exp1 = 25, RULE_exp2 = 26, RULE_op = 27, 
		RULE_factor1 = 28, RULE_factor2 = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"axioma", "program", "defines", "ctes", "partes", "part", "lcond1", "lcond2", 
			"opl", "cond", "opr", "restpart", "params", "listparam1", "listparam2", 
			"blq", "type", "sentlist", "sent1", "ident1", "ident2", "lid1", "lid2", 
			"lexp1", "lexp2", "exp1", "exp2", "op", "factor1", "factor2"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#define'", "'!'", "'||'", "'&&'", "'=='", "'<'", "'>'", "'>='", 
			"'<='", "'('", "')'", "'void'", "','", "'{'", "'}'", "'int'", "'float'", 
			"';'", "'return'", "'if'", "'else'", "'while'", "'do'", "'until'", "'for'", 
			"'='", "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "IDENT", "CONSTINT", 
			"CONSTFLOAT", "CONSTLIT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private String fileName;
	    private PrintWriter printWriter;

	    public void setFileName(String fileName) {
	        this.fileName = fileName;
	    }
	    public String getFileName() {
	        return fileName;
	    }
	    public void setPrintWriter(PrintWriter printWriter) {
	        this.printWriter = printWriter;
	    }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AxiomaContext extends ParserRuleContext {
		public ProgramContext program;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public AxiomaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axioma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterAxioma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitAxioma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitAxioma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxiomaContext axioma() throws RecognitionException {
		AxiomaContext _localctx = new AxiomaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_axioma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((AxiomaContext)_localctx).program = program();

			    ProgramaGlobal prog = new ProgramaGlobal(getFileName(), ((AxiomaContext)_localctx).program.constantes, ((AxiomaContext)_localctx).program.subprogramas, ((AxiomaContext)_localctx).program.bloqueMain);
			    printWriter.println(prog);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Constante> constantes;
		public Bloque bloqueMain;
		public List<Subprograma> subprogramas;
		public DefinesContext defines;
		public PartContext part;
		public PartesContext partes;
		public DefinesContext defines() {
			return getRuleContext(DefinesContext.class,0);
		}
		public PartContext part() {
			return getRuleContext(PartContext.class,0);
		}
		public PartesContext partes() {
			return getRuleContext(PartesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((ProgramContext)_localctx).defines = defines();
			setState(64);
			((ProgramContext)_localctx).part = part();
			setState(65);
			((ProgramContext)_localctx).partes = partes();

			    if (((ProgramContext)_localctx).part.bloqueMain != null) {
			        ((ProgramContext)_localctx).partes.bloqueMain = ((ProgramContext)_localctx).part.bloqueMain;
			    }
			    ((ProgramContext)_localctx).partes.listaSubps.add(0, ((ProgramContext)_localctx).part.subprograma);
			    ((ProgramContext)_localctx).constantes =  ((ProgramContext)_localctx).defines.listaCtes;
			    ((ProgramContext)_localctx).bloqueMain =  ((ProgramContext)_localctx).partes.bloqueMain;
			    ((ProgramContext)_localctx).subprogramas =  ((ProgramContext)_localctx).partes.listaSubps;

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinesContext extends ParserRuleContext {
		public List<Constante> listaCtes;
		public Token IDENT;
		public CtesContext ctes;
		public DefinesContext sig;
		public TerminalNode IDENT() { return getToken(GramaticaParser.IDENT, 0); }
		public CtesContext ctes() {
			return getRuleContext(CtesContext.class,0);
		}
		public DefinesContext defines() {
			return getRuleContext(DefinesContext.class,0);
		}
		public DefinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDefines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDefines(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDefines(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinesContext defines() throws RecognitionException {
		DefinesContext _localctx = new DefinesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defines);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(T__0);
				setState(69);
				((DefinesContext)_localctx).IDENT = match(IDENT);
				setState(70);
				((DefinesContext)_localctx).ctes = ctes();
				setState(71);
				((DefinesContext)_localctx).sig = defines();

				    Constante cte = new Constante((((DefinesContext)_localctx).IDENT!=null?((DefinesContext)_localctx).IDENT.getText():null), (((DefinesContext)_localctx).ctes!=null?_input.getText(((DefinesContext)_localctx).ctes.start,((DefinesContext)_localctx).ctes.stop):null));
				    ((DefinesContext)_localctx).sig.listaCtes.add(0, cte);
				    ((DefinesContext)_localctx).listaCtes =  ((DefinesContext)_localctx).sig.listaCtes;

				}
				break;
			case T__11:
			case T__15:
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				((DefinesContext)_localctx).listaCtes =  new ArrayList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CtesContext extends ParserRuleContext {
		public TerminalNode CONSTINT() { return getToken(GramaticaParser.CONSTINT, 0); }
		public TerminalNode CONSTFLOAT() { return getToken(GramaticaParser.CONSTFLOAT, 0); }
		public TerminalNode CONSTLIT() { return getToken(GramaticaParser.CONSTLIT, 0); }
		public CtesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterCtes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitCtes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCtes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtesContext ctes() throws RecognitionException {
		CtesContext _localctx = new CtesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ctes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 60129542144L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PartesContext extends ParserRuleContext {
		public Bloque bloqueMain;
		public List<Subprograma> listaSubps;
		public PartContext part;
		public PartesContext sig;
		public PartesContext partes;
		public PartContext part() {
			return getRuleContext(PartContext.class,0);
		}
		public PartesContext partes() {
			return getRuleContext(PartesContext.class,0);
		}
		public PartesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_partes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterPartes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitPartes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitPartes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PartesContext partes() throws RecognitionException {
		PartesContext _localctx = new PartesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_partes);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__15:
			case T__16:
				enterOuterAlt(_localctx, 1);
				{

				    ((PartesContext)_localctx).listaSubps =  new ArrayList();

				setState(80);
				((PartesContext)_localctx).part = part();
				setState(81);
				((PartesContext)_localctx).sig = ((PartesContext)_localctx).partes = partes();

				    if (((PartesContext)_localctx).part.bloqueMain != null) {
				        ((PartesContext)_localctx).bloqueMain =  ((PartesContext)_localctx).part.bloqueMain;
				    }
				    if (((PartesContext)_localctx).partes.bloqueMain != null) {
				        ((PartesContext)_localctx).bloqueMain =  ((PartesContext)_localctx).partes.bloqueMain;
				    }
				    ((PartesContext)_localctx).sig.listaSubps.add(0, ((PartesContext)_localctx).part.subprograma);
				    ((PartesContext)_localctx).listaSubps =  ((PartesContext)_localctx).sig.listaSubps;

				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				((PartesContext)_localctx).listaSubps =  new ArrayList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PartContext extends ParserRuleContext {
		public Bloque bloqueMain;
		public Subprograma subprograma;
		public TypeContext type;
		public Token IDENT;
		public RestpartContext restpart;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GramaticaParser.IDENT, 0); }
		public RestpartContext restpart() {
			return getRuleContext(RestpartContext.class,0);
		}
		public PartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PartContext part() throws RecognitionException {
		PartContext _localctx = new PartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_part);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((PartContext)_localctx).type = type();
			setState(88);
			((PartContext)_localctx).IDENT = match(IDENT);
			setState(89);
			((PartContext)_localctx).restpart = restpart((((PartContext)_localctx).IDENT!=null?((PartContext)_localctx).IDENT.getText():null));

			    if ("main".equals((((PartContext)_localctx).IDENT!=null?((PartContext)_localctx).IDENT.getText():null))) {
			        ((PartContext)_localctx).bloqueMain =  ((PartContext)_localctx).restpart.bloque;
			    }
			    else {
			        Cabecera cab = new Cabecera(((PartContext)_localctx).type.val, (((PartContext)_localctx).IDENT!=null?((PartContext)_localctx).IDENT.getText():null), ((PartContext)_localctx).restpart.listaParametros);
			        Bloque bloque = ((PartContext)_localctx).restpart.bloque;
			        ((PartContext)_localctx).subprograma =  new Subprograma(cab, bloque);
			    }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lcond1Context extends ParserRuleContext {
		public String val;
		public CondContext cond;
		public Lcond2Context lcond2;
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public Lcond2Context lcond2() {
			return getRuleContext(Lcond2Context.class,0);
		}
		public Lcond1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lcond1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterLcond1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitLcond1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLcond1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lcond1Context lcond1() throws RecognitionException {
		Lcond1Context _localctx = new Lcond1Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_lcond1);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case IDENT:
			case CONSTINT:
			case CONSTFLOAT:
			case CONSTLIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				((Lcond1Context)_localctx).cond = cond();
				setState(93);
				((Lcond1Context)_localctx).lcond2 = lcond2();
				((Lcond1Context)_localctx).val =  ((Lcond1Context)_localctx).cond.val + ((Lcond1Context)_localctx).lcond2.val;
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				match(T__1);
				setState(97);
				((Lcond1Context)_localctx).cond = cond();
				setState(98);
				((Lcond1Context)_localctx).lcond2 = lcond2();
				((Lcond1Context)_localctx).val =  "!" + ((Lcond1Context)_localctx).cond.val + ((Lcond1Context)_localctx).lcond2.val;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lcond2Context extends ParserRuleContext {
		public String val;
		public OplContext opl;
		public Lcond1Context lcond1;
		public OplContext opl() {
			return getRuleContext(OplContext.class,0);
		}
		public Lcond1Context lcond1() {
			return getRuleContext(Lcond1Context.class,0);
		}
		public Lcond2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lcond2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterLcond2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitLcond2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLcond2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lcond2Context lcond2() throws RecognitionException {
		Lcond2Context _localctx = new Lcond2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_lcond2);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((Lcond2Context)_localctx).opl = opl();
				setState(104);
				((Lcond2Context)_localctx).lcond1 = lcond1();
				((Lcond2Context)_localctx).val =  ((Lcond2Context)_localctx).opl.val + ((Lcond2Context)_localctx).lcond1.val;
				}
				break;
			case T__10:
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				((Lcond2Context)_localctx).val =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OplContext extends ParserRuleContext {
		public String val;
		public OplContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterOpl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitOpl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitOpl(this);
			else return visitor.visitChildren(this);
		}
	}
